# pigskin-prophet

./: .gitignore  CLAUDE.md  README.md  main.py  pull_lines.py  pyproject.toml
data/week_1/: nfl_lines_week_1_thursday_20250904_141107.json
environments/vf_nfl_picker/: README.md  __init__.py  pyproject.toml  vf_nfl_picker.py
environments/vf_nfl_picker/tools/: __init__.py
tools/: exa_tool.py  scratchpad_tool.py
