[project]
name = "vf-nfl-picker"
description = "Your environment description here"
tags = ["placeholder-tag", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vf_nfl_picker.py"]
