[project]
name = "vf-nfl-picker"
description = "NFL spread prediction benchmark with live odds, web search, and persistent learning"
tags = ["nfl", "sports-betting", "prediction", "eval", "reasoning", "tool-use"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "exa-py>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "vf_nfl_picker.py",
    "tools/",
    "tools/*.py",
]

[project.entry-points."verifiers.environments"]
vf-nfl-picker = "vf_nfl_picker:NFLPickerEnvironment"